--- a/pass.html
+++ b/pass.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>
+        pass
+    </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+<body style="background-color: rgb(176, 238, 238);">
 
-<body>
-
-    <h2>Pass phraseby Tejaswi Gannamaneni</h2>
+    <h2 style="color:yellowgreen;">Pass phraseby Tejaswi Gannamaneni</h2>
 
 
     <form>
-        <label for="secretPharse">Enter the secret phrase</label>
+        <div class="form-group">
+        <label for="secretPharse" style="color: rgb(236, 11, 199);">Enter the secret phrase</label>
         <input type="password" id="secret_pharse" name="secret_pharse" value="Let me in"> <br>
 
-        <label for="nick">Enter a phrase</label>
+        <label for="nick" style="color: rgb(115, 255, 0);">Enter a phrase</label>
         <input type="text" id="Pharse" name="Pharse" autofocus>
         <br>
-        <input type="button" onclick="processPhrase()" value="Check the phrase">
+    </div>
+        <input type="button" onclick="processPhrase()" value="Check the phrase" style="color: blue;">
     </form>
 
     <p id="pharse_Result">It is the pharsed text.</p>
+    <div class="container">
     <img id= "animal" src="Easternbluebird.jpg"  alt="blue_bird"  width="200" height="200" onclick="newImage()">  
-
+</div>
     <script>
         var correct = 0;
         var wrong = 0;
