--- a/arithmetic.html
+++ b/arithmetic.html
@@ -4,33 +4,45 @@
      <title>
          arithmetic functions
      </title>
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+         crossorigin="anonymous"></script>
  </head>
-<body>
+<body style="background-color: cadetblue;">
 
-<h2>computes by Tejaswi Gannamaneni</h2>
+
 
 <form>
-        <label for="form_base" class="form-label">Enter a base </label>
+    <div class="container">
+        <h2>computes by Tejaswi Gannamaneni</h2>
+        <label for="form_base" class="form-label" style="color: rgb(236, 11, 199);">Enter a base </label>
         <input type="number" class="form-control" id="form_base" name="form_base" value=10> <br>
 
-        <label for="form_exponent" class="form-label">Enter an exponent </label>
+        <label for="form_exponent" class="form-label" style="color: brown;">Enter an exponent </label>
         <input type="number" class="form-control" id="form_exponent" name="form_exponent" value=2> <br>
 
     <input type="button" class="btn btn-primary" onclick="powers()" value="Compute">
+    <p id="result">This text will be replaced </p>
+</div>
 </form>
 
-<p id="result">This text will be replaced </p>
+
 
 
 <form>
+    <div class="container">
         <input type="radio" class="form-check-input" id="rg1_plus" name="operators" value="plus"
             onclick="processRadio()">
-        <label for="rg1_plus" class="form-check-label">+</label></br>
+        <label for="rg1_plus" class="form-check-label"style="color: brown;">+</label></br>
   
 
         <input type="radio" class="form-check-input" id="rg1_minus" name="operators" value="minus"
             onclick="processRadio()">
-        <label for="rg1_minus" class="form-check-label">-</label></br>
+        <label for="rg1_minus" class="form-check-label"style="color: blue;">-</label></br>
   
 
         <input type="radio" class="form-check-input" id="rg1_times" name="operators" value="times"
@@ -40,10 +52,11 @@
         <input type="radio" class="form-check-input" id="rg1_divide  " name="operators" value="divide"
             onclick="processRadio()">
         <label for="rg1_divide" class="form-check-label">/</label></br>
-  
+        <p id="result2">This text will be replaced </p>
+    </div>
 </form>
 <br>
-<p id="result2">This text will be replaced </p>
+
 <br>
 
 
